<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mrafaelbatista.smartlife.CadastrarAtividades"
    tools:showIn="@layout/activity_cadastrar_atividades">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/cadAtividades"
        android:textSize="25sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cb_abdFrontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/abdomFrontal" />

    <CheckBox
        android:id="@+id/cb_abdBike"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/abdomBike" />

    <CheckBox
        android:id="@+id/cb_abdInversao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/abdomInversao" />

    <CheckBox
        android:id="@+id/cb_bcpRoscaConcent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/bicepsRoscaConcent" />

    <CheckBox
        android:id="@+id/cb_bcpRoscaDireta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/bicepsRoscaDireta" />

    <CheckBox
        android:id="@+id/cb_bcpRoscaAlternada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/bicepsRoscaAlternada" />

    <Button
        android:id="@+id/btn_salvarAtividades"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:onClick="listarAtividades"
        android:text="@string/salvarAtividades" />


</LinearLayout>
