<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mrafaelbatista.smartlife.CadastrarTreino"
    tools:showIn="@layout/activity_cadastrar_treino">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/tituloCadTreino"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nomeTreino"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:hint="@string/nometreinoCadTreino" />

    <EditText
        android:id="@+id/objTreino"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/objCadTreino" />

    <Button
        android:id="@+id/adicionarAtividadesTreino"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="adicionarAtividade"
        android:text="@string/adicionarCadTreino" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/atividadeCadTreino"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/listaAtividadesTreino"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#82a8c4"
        android:padding="10dp"
        android:text="@string/semAtividadesCadTreino"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/salvarTreino"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="salvarTreino"
        android:text="@string/salvarCadTreino" />

</LinearLayout>
