<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay_contentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smart_life_back"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mrafaelbatista.smartlife.MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:layout_width="164dp"
        android:layout_height="164dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/smart_life" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tx_inputLay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp">

        <EditText
            android:id="@+id/loginAut"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/loginAut"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tx_inputLay2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/senhaAut"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/senhaAut"
            android:padding="10dp"
            android:password="true" />
    </android.support.design.widget.TextInputLayout>


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/conectAut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/conectadoAut"
            android:textStyle="normal" />

        <Button
            android:id="@+id/acessarAut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:onClick="autenticarLogin"
            android:text="@string/acessarAut" />

    </LinearLayout>


</LinearLayout>
